# recorder_visualiser

./: CMakeLists.txt  package.xml
include/: visualiser.h
launch/: visual.launch
scripts/: rosbag_record.py
src/: main.cpp
